--- a/s01_Intro/intro14.html
+++ b/s01_Intro/intro14.html
@@ -31,6 +31,48 @@
         console.log(`${autos[i].modelo} tiene un motor de ${autos[i].motor} cc.`);
     }
     </pre></code> 
+
+    <h2>Manipulando el array: forEach & map</h2> 
+
+    <p>Continúo con el tema anterior, dedicado a objetos.
+        <br>Voy a manipular objetos dentro de un array.
+    </p>
+
+    <pre><code>
+    const carrito = [
+        { id: 1, producto: 'Camisa'  },
+        { id: 2, producto: 'Juguete' },
+        { id: 3, producto: 'Libro'   },
+        { id: 4, producto: 'Perfume' },
+    ];
+
+    carrito.forEach( function( itemCarrito ) {
+        console.log(`Producto núm. ${itemCarrito.id} del carro es: ${itemCarrito.producto}`);
+    });
+
+    carrito.forEach( function( itemCarrito, indice ) {
+        console.log(`Indice ${indice} del carro es: ${carrito[indice].producto}`);
+    });
+
+    const arrayDeProductosComprados = carrito.map( function( itemCarrito ) {
+        return producto;
+    });
+    </code></pre>
+    
+    <h2>Recorrer todas las propiedades de un objeto con un for</h2> 
+
+    <pre><code>
+    const automovil = {
+        modelo: 'Camaro', 
+        motor: 6.1,
+        anio: 1996,
+        marca: 'Chevrolet'
+    };
+
+    for( let propiedad in automovil ) {
+        console.log(`${propiedad}: ${automovil[propiedad]}`);
+    }
+    </code></pre>
     
     <footer>
         <div class="anterior" style="float:left"><a href="intro13.html">Anterior</a></div>
