r-veiga 2019.06.04 intro AJAX + JSON

--- a/s03_AJAX/AJAX01_intro.html
+++ b/s03_AJAX/AJAX01_intro.html
@@ -86,7 +86,7 @@
         
     <footer>
         <div class="anterior" style="float:left"><a href="../s02_OO/OO02_prototipos.html">Anterior</a></div>
-        <div class="siguiente" style="float:right"><a href="AJAX02.html">Siguiente</a></div>
+        <div class="siguiente" style="float:right"><a href="AJAX02_json.html">Siguiente: AJAX + JSON</a></div>
     </footer>
     
     <script src="AJAX01_intro.js"></script>
